--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>dfghjhkhjghfgdfd</h1>
-    <h2>edited</h2>
-    <h3>edited 2</h3>
+    <h1>web1</h1>
   </body>
 </html>
