--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>web1</h1>
+    <p>Lorem ipsum dolor sit.</p>
+    <p>Lorem ipsum dolor sit.</p>
+    <p>Lorem ipsum dolor sit.</p>
   </body>
 </html>
